bugfix/ETSL-466 css changes alignment

--- a/ui.frontend/src/main/webpack/etisalat/_mixins.scss
+++ b/ui.frontend/src/main/webpack/etisalat/_mixins.scss
@@ -136,6 +136,19 @@ $screen-xxl-max: 1201px;
     vertical-align: top;
     width: 0.45em;
 }
+@mixin  link-arrow-green{
+    border: solid $arrow-border-green;
+    border-width: 0 1px 1px 0;
+    content: '';
+    display: inline-block;
+    height: 0.45em;
+    left: 9rem;
+    position: relative;
+    top: 0.3125em;
+    transform: rotate(-45deg);
+    vertical-align: top;
+    width: 0.45em;
+}
 
 
 @mixin font-family-lato{
