--- a/ui.frontend/src/main/webpack/etisalat/styles/media_cta_section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/media_cta_section.scss
@@ -76,7 +76,7 @@
                 }
 
                 :before {
-                    @include arrow-after-link;
+                    @include link-arrow-green;
                 }
             }
         }
